# tp1-algo3

./: .gitignore  README.md  Untitled.ipynb  best_case.txt  requirements.txt  results_btf.txt  results_bto.txt  results_dp.txt  results_fb.txt  test_creator.py  tests2_tp1.txt  tests_tp1.txt  tp1-ayed3-notebook.ipynb  untitled.py  worse_case.txt  worse_case_bto.txt
codigo/: CMakeLists.txt  main.cpp  test_cases.txt
codigo/src/: algorithms.cpp  algorithms.h
codigo/tests/: algo_tests.cpp  random_suite_tp1.txt  tests3_tp1.txt  tests_pd_exahustivo_10.txt  tests_pd_exahustivo_20.txt  tests_pd_exahustivo_30.txt  tests_pd_exahustivo_40.txt  tests_tp1.txt
codigo/tests/archivos/: btf_worse_case.txt  random_suite_tp1.txt  test_creator.py  tests2_tp1.txt  tests3_tp1.txt  tests_pd_exahustivo_1000.txt  tests_pd_exahustivo_10000.txt  tests_pd_exahustivo_1500.txt  tests_pd_exahustivo_2000.txt  tests_pd_exahustivo_2500.txt  tests_pd_exahustivo_3000.txt  tests_pd_exahustivo_3500.txt  tests_pd_exahustivo_4000.txt  tests_pd_exahustivo_4500.txt  tests_pd_exahustivo_5000.txt  tests_pd_exahustivo_5500.txt  tests_pd_exahustivo_6000.txt  tests_pd_exahustivo_6500.txt  tests_pd_exahustivo_7000.txt  tests_pd_exahustivo_7500.txt  tests_pd_exahustivo_8000.txt  tests_pd_exahustivo_8500.txt  tests_pd_exahustivo_9000.txt  tests_pd_exahustivo_9500.txt
resultados/: bto_vs_pd.txt  random_suite_res_btf.txt  random_suite_res_btf_2.txt  random_suite_res_bto.txt  random_suite_res_bto_2.txt  random_suite_res_bto_flp.txt  random_suite_res_bto_flp_2.txt  random_suite_res_fb.txt  random_suite_res_fb_2.txt  (+19 more)
(+1 files in other folders)
